Update line breaking

--- a/source/_posts/2018-05-2018-05-21-Reading-Summary.md
+++ b/source/_posts/2018-05-2018-05-21-Reading-Summary.md
@@ -9,14 +9,11 @@ Posts I found interesting during my reading:
 
 ### [Writing a Time Series Database from Scratch](https://fabxc.org/tsdb/)
 
-The author's experience in writing a time-series database from groundup, for
-Prometheus.
+The author's experience in writing a time-series database from groundup, for Prometheus.
 
 ### [Introducing Thanos: Prometheus at Scale](https://improbable.io/games/blog/thanos-prometheus-at-scale)
 
-The effort to scale Prometheus with a new project Thanos,
-with Kubernetes sidecar pattern, to read
-data from individual nodes, pre-process (e.g. sampling), and submit to a
+The effort to scale Prometheus with a new project Thanos, with Kubernetes sidecar pattern, to read data from individual nodes, pre-process (e.g. sampling), and submit to a
 centralized data storage and display.
 
 ### [A Beginner's Guide To Scaling To 11 Million+ Users On Amazon's AWS](http://highscalability.com/blog/2016/1/11/a-beginners-guide-to-scaling-to-11-million-users-on-amazons.html)
@@ -30,16 +27,10 @@ A display of CPU trace as a Github-style texture tiles.
 
 ### [A Usable C++ Dialect that is Safe Against Memory Corruption](http://ithare.com/a-usable-c-dialect-that-is-safe-against-memory-corruption/)
 
-IT-'No Bug'-Hare is an interesting blog I found recently,
-focused on system, C++ language and game design. A good read for C++ fanatics
-and system designers.
+IT-'No Bug'-Hare is an interesting blog I found recently, focused on system, C++ language and game design. A good read for C++ fanatics and system designers.
 
 ----
 
 I'm feeling guilty for not updating for so long. But on the bright side: I'm back.
 
-As a part of work requirements I'm taking on Golang and some small
-distributed system design jobs. It's an interesting language for this task:
-network, systems, infrastructures, etc. I'm having mixed but mostly
-positive feelings about this language, and maybe will share my experience
-when I got a chance.
+As a part of work requirements I'm taking on Golang and some small distributed system design jobs. It's an interesting language for this task: network, systems, infrastructures, etc. I'm having mixed but mostly positive feelings about this language, and maybe will share my experience when I got a chance.
